# vencopy

./: .gitignore  .gitlab-ci.yml  CITATION.cff  CONTRIBUTING.md  Individual contributor license agreement vencopy.docx  LICENSE  MANIFEST.in  README.md  VencoPy.srctrldb  VencoPy.srctrlprj  VencoPy_Individual Contributor License Agreement.docx  assignChargeInfra.py  demo_VencoPy.ipynb  evaluateDriveProfiles.py  evaluateTripPurposes.py  midTripInput_first1000Trips.csv  parseEvalInfraVencoRun.py  parseMiD.py  pyproject.toml  pyproject_poetry.tomlx  pytest.ini  requirements.yml  requirements_pip.txt  review-comments.md  run.py  run.py.orig  setup.py  vencoPyOutput_baseDC_MiD08.csv  venco_main.py
.github/workflows/: draft-pdf.yml
archive/: userVenco.yaml
classes/: dataParsers.py  evaluationManager.py  evaluators.py  flexEstimationManager.py  flexEstimators.py  gridModelManager.py  gridModelers.py  parseManager.py  tripDiaryBuilders.py  tripDiaryManager.py
config/: config.yaml  evaluatorConfig.yaml  flexConfig.yaml  globalConfig.yaml  gridConfig.yaml  parseConfig.yaml  tripConfig.yaml
core/: flexestimators.py
core/dataparsers/: parkinference.py  parseVF.py
docs/: architecture.rst  conf.py  index.rst  installation.rst  releaseTimeline.rst
docs/_static/: style.css
docs/contribution/: contributing.rst  howToContribute.rst  releaseTimeline.rst
docs/figures/: ReleaseWorkflow.drawio  new_vencoPy_structure.drawio  new_vencoPy_structure_simple.drawio  vencopy_structure_detailed.drawio  (+1 more)
inputData/: VencoPy_scalarInput.xlsx  VencoPy_scalarInputSES.xlsx  inputProfiles_Drive_MiD08.csv  inputProfiles_Drive_baseDC_MiD08.csv  inputProfiles_Drive_runTest_MiD08.csv  inputProfiles_Drive_vpConsolid_MiD17.csv  inputProfiles_Drive_woIntermod_MiD08.csv  inputProfiles_Plug_MiD08.csv  inputProfiles_Plug_baseDC_MiD08.csv  inputProfiles_Plug_vpConsolid_MiD17.csv  inputProfiles_Plug_woIntermod_MiD08.csv  inputProfiles_Purpose_baseDC_MiD08.csv  inputProfiles_Purpose_runTest_MiD08.csv  inputProfiles_Purpose_vpConsolid_MiD17.csv  inputProfiles_Purpose_woIntermod_MiD08.csv
paper/: paper.bib  paper.md
presentation/: Wulff_PerformanceIdea_Emobpy-VencoPy.pptx  Wulff_VencoPy_OOOptions.pptx
scripts/: globalFunctions.py  libInput.py  libOutput.py  libPreprocessing.py  libProfileCalculation.py  parseManager.py  sandboxFunctions.py  utilsParsing.py  utilsTimestamp.py
source/: architecture.rst  codestyle.rst  conf.py  filtering.rst  functions.rst  howToContribute.rst  index.rst  installation.rst  outputProfileSpecification.rst  publications.rst  start.rst
test/: dummyTests_wiesiemag.py  test_end_to_end.py
tutorial/: sampling.py
tutorials/: tutorial4.py  vencopy_tutorial_01.ipynb  vencopy_tutorial_01.py  vencopy_tutorial_02.ipynb  vencopy_tutorial_02.py  vencopy_tutorial_03.ipynb  vencopy_tutorial_03.py  vencopy_tutorial_04.ipynb  vencopy_tutorial_04.py  vencopy_tutorial_05.ipynb  vencopy_tutorial_05.py
vencopy/: __init__.py  __main__.py  run.py
(+177 files in other folders)
