[tool.poetry]
name = "vencopy"
version = "1.0.0"
description = "Vehicle Energy Consumption in Python: A tool to simulate load flexibility of electric vehicle fleets."
authors = [
    "Niklas Wulff <niklas.wulff@dlr.de>",
    "Fabia Miorelli <fabia.miorelli@dlr.de>",
]
license = "BSD-3-Clause"
readme = "README.md"
packages = [{ include = "vencopy" }] #'vencopy.core', 'vencopy.utils'
url = 'https://gitlab.com/dlr-ve/esy/vencopy/vencopy'


# install_requires=[]
# entry_points={
#        'console_scripts': [
# 'vencopy = vencopy.__main__:create',

[tool.poetry.dependencies]
python = "^3.9"
pandas = "<= 1.5.2"
ruamel.yaml = "^0.2.5"
click = "^8.1.3"
pyyaml = "^6.0"

[project.optional-dependencies]
dev = ["black"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
